Add /like/{videoID} [delete]
